# nbchkr

./: .gitignore  .readthedocs.yml  README.md  assignment.ipynb  main.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  submitted.ipynb  tox.ini
.github/workflows/: config.yml  style.yml  tests.yml
docs/: conf.py  index.rst
docs/_static/tutorial/: assignement.ipynb
docs/explanation/: index.rst  why.rst  why_autocheck.rst
docs/howto/: check_a_submission.rst  contribute.rst  index.rst  release_a_source_assignment.rst  solve_an_assignment.rst  write_an_assignment.rst
docs/reference/: bibliography.rst  changelog.rst  index.rst
docs/tutorial/: index.rst
docs/tutorial/assignement/: assignement.ipynb  data.csv  main.ipynb
docs/tutorial/assignment/: data.csv  main.ipynb
docs/tutorial/assignment/submissions/: assignment_01.ipynb-feedback.md  assignment_02.ipynb  assignment_02.ipynb-feedback.md  assignment_03.ipynb  assignment_03.ipynb-feedback.md  assignment_03.ipynb_feedback.md
src/nbchkr/: __init__.py  __main__.py  checks.py
src/nbchkr/utils/: __init__.py
tests/: test_check.py  test_cli.py  test_quality_assurance.py  test_release.py  test_utility_functions.py  test_version.py
tests/nbs/: expected_output.csv  notebook-with-hidden-problems.ipynb  test.ipynb
utils/run_alex/: main.py
utils/run_proselint/: main.py
utils/run_spell_checker/: main.py
